Added authentication, and features section to landing page

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,8 @@
 
     /* Custom properties */
     --navigation-height: 3.5rem;
-    --color-one: #4ec1f2;
+    --color-one: #2aa4d0;
+    --color-one-darker: #2286AA;
     --color-two: #df6e9d;
     --color-three: #5b41a3;
 
